--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <h1>WUA Library Study Space Availability</h1>
         <p>Save time by checking real-time availability of study spaces in the library!</p>
-        <a href="#" class="button">Check Available Spaces</a>
+        <a href="#" class="button1">Check Available Spaces</a>
     </div>
 </body>
 
