--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
+    <link href="home2.html" rel="home2">
 
     <title>WUA Library Study Space Availability</title>
  
@@ -14,7 +15,7 @@
     <div class="container">
         <h1>WUA Library Study Space Availability</h1>
         <p>Save time by checking real-time availability of study spaces in the library!</p>
-        <a href="#" class="button1">Check Available Spaces</a>
+        <a href="home2.html" class="button">Check Available Spaces</a>
     </div>
 </body>
 
